@@ -37,7 +37,8 @@
 					<div class="form-row">
 						<label for="name" class="form-label">Name *</label>
 						<div class="form-field">
-							<input id="name" name="name" placeholder="Please enter your name" type="text" required>
+							<input id="name" name="name" placeholder="Please enter your name" type="text" required
+								data-fb-ph-title-use="false" data-fb-desc-location="after">
 						</div>
 					</div>
 					<div class="form-row">
